--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "engines":{
-      "node":"0.10.x",
-      "npm": "1.4.x"
-
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.4.x"
   },
   "repository": {
     "type": "git",
@@ -26,6 +25,8 @@
     "jade": "~1.3.1",
     "mongoose": "^3.8.18",
     "morgan": "^1.4.1",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "stylus": "^0.49.2"
   }
 }
